--- a/public/vamika/css/main.css
+++ b/public/vamika/css/main.css
@@ -279,3 +279,6 @@ select.page-size {
     -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
 }
+.select2-container {
+    width: 100% !important;
+}
