--- a/public/vamika/css/main.css
+++ b/public/vamika/css/main.css
@@ -282,3 +282,308 @@ select.page-size {
 .select2-container {
     width: 100% !important;
 }
+/*========================== Start Dashboard ==========================*/
+
+.dashboard .vd_bg-green {
+	background-color: #4CAF50 !important;
+}
+.dashboard .vd_status-widget{
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+.dashboard .vd_status-widget a {
+	display: block;
+	text-decoration: none;
+	color: #F0F0F0;
+	padding: 21px;
+}
+.dashboard .vd_status-widget .menu-icon {
+	display: block;
+	font-size: 48px;
+	float: left;
+	line-height: 56px;
+}
+.dashboard .vd_status-widget .menu-value {
+	margin-left: 25px;
+	line-height: 56px;
+	font-size: 36px;
+}
+.dashboard .vd_status-widget .menu-text {
+	padding-top: 10px;
+	font-size: 16px;
+	letter-spacing: .2px;
+	text-transform: uppercase;
+}
+.dashboard .vd_status-widget a{
+	-webkit-transition-duration: 0.5s;
+	transition-duration: 0.5s;
+}
+.dashboard .vd_status-widget a:hover {
+	color: #FFF;
+	background: rgba(0,0,0,0.21);
+	-webkit-transition-duration: 0.5s;
+	transition-duration: 0.5s;
+}
+.dashboard .vd_bg-red {
+	background-color: #f85d2c !important;
+}
+.dashboard .vd_bg-purple {
+	background-color: #9c27b0 !important;
+}
+.dashboard .vd_bg-blue {
+	background-color: #673ab7 !important;
+}
+.dashboard .vd_bg-yellow {
+	background-color: #f89c2c !important;
+}
+.dashboard .vd_bg-grey {
+	background-color: #607d8b !important;
+}
+.dashboard .vd_bg-dark-green {
+    background-color: #6F6A00 !important;
+}
+.dashboard .margin_top_27{
+	margin-top: 27px;
+}
+
+.dashboard .profile_section{
+	padding-left:9px;
+	padding-right: 9px;
+	padding-bottom: 30px;
+}
+.dashboard .text-wrap h3{
+	font-size: 30px;
+}
+.dashboard #user-widget{
+	border: 2px solid #00796b;
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+.dashboard #user-widget .heading {
+	color: #00796b;
+	background-color: #00796b;
+	border-left: 3px solid #00796b;
+}
+.dashboard #user-widget .list-group-item-head {
+	border: 0;
+	color: #FFFFFF;
+	padding: 15px;
+}
+.dashboard #user-widget .img-circle {
+	height: 90px;
+	width: 90px;
+	padding: 8px;
+	border: 1px solid #9C9084;
+	margin-right: 10px;
+	float: left;
+}
+.dashboard #user-widget .img-rect {
+	height: 90px;
+	width: auto;
+	padding: 8px;
+	border: 1px solid #FFFFFF;
+	margin-right: 10px;
+	float: left;
+}
+.dashboard .img-circle {
+	border-radius: 50%;
+}
+.dashboard #user-widget .heading .text-wrap {
+	padding: 10px 0;
+}
+.dashboard #user-widget .list-group-item {
+	border: 0;
+	color: #00796b;
+	padding: 15px;
+	border-left: 3px solid #fff;
+}
+.dashboard #user-widget a.list-group-item:hover {
+	background-color: #F8F3F0;
+	color: #64584C;
+	border-left: 3px solid #009688;
+}
+.dashboard #user-widget a.list-group-item:hover i.fa {
+	color: #E35935;
+}
+.dashboard .list-group-item:last-child {
+	margin-bottom: 0;
+	border-bottom-right-radius: 0px;
+	border-bottom-left-radius: 0px;
+}
+
+.dashboard .profile-card{
+	background: #FFFFFF;
+	border: 2px solid #ffa000;
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+.dashboard .profile-card-item-head{
+	border: 0;
+	color: #FFFFFF;
+	padding: 15px;
+}
+.dashboard .profile-card .heading {
+	color: #FFFFFF;
+	background-color: #ffa000;
+	border-left: 3px solid #ffa000;
+}
+.dashboard .profile-card .img-rect {
+	height: 90px;
+	width: auto;
+	padding: 8px;
+	border: 1px solid #FFFFFF;
+	margin-right: 10px;
+	float: left;
+}
+.dashboard .profile-card .heading .text-wrap {
+	padding: 20px 0;
+}
+.dashboard .profile-card p{
+	color: #999999;
+	padding-left: 18px;
+	padding-right: 18px;
+	padding-top: 9px;
+	padding-bottom: 9px;
+	margin: 0px;
+}
+.dashboard .profile-card>p>i{
+	margin-right: 9px;
+}
+.dashboard .orange{
+	color: #f6bb42;
+}
+.dashboard .light-green{
+	color: #70ca63;
+}
+.dashboard .purple-text{
+	color: #9c27b0;
+}
+.dashboard .pink-text{
+	color: #ff4081;
+}
+.dashboard .red-text{
+	color: #D32F2F;
+}
+.dashboard .font_dasboard {
+	color: #000000;
+	text-align: center;
+	padding-top: 30px;
+}
+.dashboard .font_dasboard_class>a{
+	text-decoration: none;
+	color: #000000;
+}
+.dashboard .font_dasboard_class>a:hover{
+	text-decoration: none;
+	color: rgba(0, 148, 255, 1);
+	-webkit-transform: scale(1.1, 1.1);
+	-ms-transform: scale(1.1, 1.1);
+	transform: scale(1.1, 1.1);
+	transition-duration: 0.5s;
+	-webkit-transition-duration: 0.5s;
+}
+.dashboard a > .font_dasboard_pack > i {
+	color: #000000;
+	border: #000000 5px solid;
+	padding: 20px;
+	font-size: 60px;
+	-webkit-transform: scale(1.1, 1.1);
+	-ms-transform: scale(1.1, 1.1);
+	transform: scale(1.1, 1.1);
+	transition-duration: 0.5s;
+	-webkit-transition-duration: 0.5s;
+}
+.dashboard a:hover > .font_dasboard_pack > i {
+	color: rgba(0, 148, 255, 1);
+	border: rgba(0, 148, 255, 1) 5px solid;
+	padding: 20px;
+	font-size: 60px;
+	border-radius: 18px;
+	-webkit-transform: scale(1.1, 1.1);
+	-ms-transform: scale(1.1, 1.1);
+	transform: scale(1.1, 1.1);
+	transition-duration: 0.5s;
+	-webkit-transition-duration: 0.5s;
+}
+
+
+.dashboard .panel {
+	border-radius: 0px;
+}
+.dashboard .panel-skyblue{
+	border-color: #42a5f5 !important;
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+.dashboard .panel-skyblue>.panel-heading {
+	color: #FFFFFF;
+	font-size: 18px;
+	text-transform: uppercase;
+	background-color: #42a5f5;
+	border-color: #42a5f5;
+}
+.dashboard .panel-skyblue>.panel-heading>i{
+	padding-right: 18px;
+}
+.dashboard .panel-heading {
+	border-top-left-radius: 0px;
+	border-top-right-radius: 0px;
+}
+
+.dashboard .hvr-bounce-to-right {
+	margin: 9px 9px;
+	color: #0094ff;
+	text-decoration: none;
+	border: 2px solid #0094ff;
+	padding: 12px 33px;
+	display: inline-block;
+	vertical-align: middle;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	-moz-osx-font-smoothing: grayscale;
+	position: relative;
+	-webkit-transition-property: color;
+	transition-property: color;
+	-webkit-transition-duration: 0.5s;
+	transition-duration: 0.5s;
+}
+.dashboard .hvr-bounce-to-right:before {
+	content: "";
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: #0094ff;
+	-webkit-transform: scaleX(0);
+	transform: scaleX(0);
+	-webkit-transform-origin: 0 50%;
+	transform-origin: 0 50%;
+	-webkit-transition-property: transform;
+	transition-property: transform;
+	-webkit-transition-duration: 0.5s;
+	transition-duration: 0.5s;
+	-webkit-transition-timing-function: ease-out;
+	transition-timing-function: ease-out;
+}
+.dashboard .hvr-bounce-to-right:hover, .dashboard .hvr-bounce-to-right:focus, .dashboard .hvr-bounce-to-right:active {
+	text-decoration: none;
+	color: white;
+	border: 2px solid #0094ff;
+}
+.dashboard .hvr-bounce-to-right:hover:before, .dashboard .hvr-bounce-to-right:focus:before, .dashboard .hvr-bounce-to-right:active:before {
+
+	-webkit-transform: scaleX(1);
+	transform: scaleX(1);
+	-webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+	transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
+}
+.dashboard i.user-icon {
+	color: #607d8b !important;
+	font-size: 76px;
+}
+.dashboard .center-brand-icon {
+    font-size: 36px;
+}
+/*========================== End Dashboard ==========================*/
+
